@@ -113,6 +113,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #13901: Prevent test_distutils failures on OS X with --enable-shared.
+
 - Issue #13676: Handle strings with embedded zeros correctly in sqlite3.
 
 - Issue #13506: Add '' to path for IDLE Shell when started and restarted with Restart Shell.
